--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
       </div>
 
-      <div class="row social-links text-center margin-top-20">
+      <div class="row social-links text-center margin-top-20 margin-bottom-50">
         <div class="col-sm-6 col-sm-offset-3">
           <div class="col-xs-4">
             <a href="https://github.com/dbradleyfl" target="_blank">
