change image to gravatar

--- a/index.html
+++ b/index.html
@@ -8,22 +8,21 @@
     <title>Devon Bradley</title>
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="img/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="img/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="img/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-    <link rel="manifest" href="img/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=16.png">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=144.png">
     <meta name="theme-color" content="#ffffff">
 
     <!-- Bootstrap -->
@@ -48,7 +47,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-4 col-sm-offset-4 col-xs-8 col-xs-offset-2 margin-top-50">
-          <img src="img/me.jpg" alt="me" class="img-responsive img-circle center-block" />
+          <img src="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=500" alt="me" class="img-responsive img-circle center-block" />
         </div>
       </div>
 
