--- a/index.html
+++ b/index.html
@@ -66,28 +66,36 @@
       </div>
 
       <div class="row social-links text-center margin-top-20 margin-bottom-50">
-        <div class="col-sm-6 col-sm-offset-3">
-          <div class="col-xs-4">
+        <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+          <div class="col-xs-3">
             <a href="https://github.com/dbradleyfl" target="_blank">
-              <span class="fa-stack fa-lg fa-4x">
+              <span class="fa-stack fa-lg fa-3x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </div>
-          <div class="col-xs-4">
+          <div class="col-xs-3">
             <a href="https://twitter.com/dbradleyfl" target="_blank">
-              <span class="fa-stack fa-lg fa-4x">
+              <span class="fa-stack fa-lg fa-3x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </div>
-          <div class="col-xs-4">
+          <div class="col-xs-3">
             <a href="https://medium.com/@dbradleyfl" target="_blank">
-              <span class="fa-stack fa-lg fa-4x">
+              <span class="fa-stack fa-lg fa-3x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </div>
+          <div class="col-xs-3">
+            <a href="https://linkedin.com/in/dbradleyfl" target="_blank">
+              <span class="fa-stack fa-lg fa-3x">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </div>
