--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </a>
           </div>
           <div class="col-xs-3">
-            <a href="https://twitter.com/dbradleyfl" target="_blank">
+            <a href="https://twitter.com/devonsbradley" target="_blank">
               <span class="fa-stack fa-lg fa-3x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -84,7 +84,7 @@
             </a>
           </div>
           <div class="col-xs-3">
-            <a href="https://medium.com/@dbradleyfl" target="_blank">
+            <a href="https://medium.com/@devonsbradley" target="_blank">
               <span class="fa-stack fa-lg fa-3x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
@@ -92,7 +92,7 @@
             </a>
           </div>
           <div class="col-xs-3">
-            <a href="https://linkedin.com/in/dbradleyfl" target="_blank">
+            <a href="https://linkedin.com/in/devonsbradley" target="_blank">
               <span class="fa-stack fa-lg fa-3x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
