--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
     <meta name="msapplication-TileImage" content="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
@@ -36,71 +33,40 @@
 
     <!-- Custom Styles -->
     <link rel="stylesheet" href="styles.css" media="screen" title="no title" charset="utf-8">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
+    <!-- aframe -->
+    <script src="https://aframe.io/releases/0.2.0/aframe.min.js"></script>
   </head>
   <body>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-4 col-sm-offset-4 col-xs-8 col-xs-offset-2 margin-top-50">
-          <img src="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=500" alt="me" class="img-responsive img-circle center-block" />
-        </div>
-      </div>
-
-      <div class="row text-center margin-top-20">
-        <div class="col-sm-8 col-sm-offset-2">
-          <h3>
-            If you want to be an anomaly, you've got to act like one.
-          </h3>
-          <p>
-            Software Engineer. Entreprenuer. CEO @ <a href="http://www.violationradar.com">Violation Radar</a>.
-          </p>
-          <small>
-            <i class="fa fa-map-marker"></i> San Francisco, CA
-          </small>
-        </div>
-      </div>
-
-      <div class="row social-links text-center margin-top-20 margin-bottom-50">
-        <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
-          <div class="col-xs-3">
-            <a href="https://github.com/dbradleyfl" target="_blank">
-              <span class="fa-stack fa-lg fa-3x">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </div>
-          <div class="col-xs-3">
-            <a href="https://twitter.com/devonsbradley" target="_blank">
-              <span class="fa-stack fa-lg fa-3x">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </div>
-          <div class="col-xs-3">
-            <a href="https://medium.com/@devonsbradley" target="_blank">
-              <span class="fa-stack fa-lg fa-3x">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </div>
-          <div class="col-xs-3">
-            <a href="https://linkedin.com/in/devonsbradley" target="_blank">
-              <span class="fa-stack fa-lg fa-3x">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </div>
-        </div>
-      </div>
+    <a-scene>
+      <a-sky src="img/ob-360.jpg" rotation="0 190 0"></a-sky>
+    </a-scene>
+    <div class="links">
+      <a href="https://github.com/dbradleyfl" target="_blank">
+        <span class="fa-stack fa-lg fa-3x">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+        </span>
+      </a><br>
+      <a href="https://twitter.com/devonsbradley" target="_blank">
+        <span class="fa-stack fa-lg fa-3x">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+        </span>
+      </a><br>
+      <a href="https://medium.com/@devonsbradley" target="_blank">
+        <span class="fa-stack fa-lg fa-3x">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
+        </span>
+      </a><br>
+      <a href="https://linkedin.com/in/devonsbradley" target="_blank">
+        <span class="fa-stack fa-lg fa-3x">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+        </span>
+      </a>
+    </div>
 
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -108,8 +74,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
-    <!-- Twitter Ticker -->
-    <script type="text/javascript">(function(){var ticker=document.createElement('script');ticker.type='text/javascript';ticker.async=true;ticker.src='//twitcker.com/ticker/dbradleyfl.js?speed=8&count=6&background=ffffff&tweet=ffffff&open=true&container=footer';(document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(ticker);})();</script>
 
     <!-- Google Analytics -->
     <script>
