bootstrap js might have been breaking aframe

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </head>
   <body>
     <a-scene>
-      <a-sky src="img/ob-360.jpg" rotation="0 190 0"></a-sky>
+      <a-sky src="/img/ob-360.jpg" rotation="0 190 0"></a-sky>
     </a-scene>
     <div class="links">
       <a href="https://github.com/dbradleyfl" target="_blank">
@@ -69,11 +69,6 @@
     </div>
 
     </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
 
     <!-- Google Analytics -->
     <script>
