--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <link rel="stylesheet" href="styles.css" media="screen" title="no title" charset="utf-8">
 
     <!-- aframe -->
-    <script src="https://aframe.io/releases/0.2.0/aframe.min.js"></script>
+    <script 
+src="https://aframe.io/releases/0.3.2/aframe.min.js"></script>
   </head>
   <body>
     <a-scene>
