--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Devon Bradley</title>
-    <style>body { margin: 0; }</style>
+    <style>body { margin: 0; 
+overflow: hidden; 
+}</style>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="https://secure.gravatar.com/avatar/8c0f0c68e8f4f3087b0af8e2b6e24ce0?s=60.png">
