--- a/macbar-next-bus/index.html
+++ b/macbar-next-bus/index.html
@@ -36,7 +36,7 @@
     <!-- navbar -->
     <nav class="navbar nav-fixed-top is-primary" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" href="#home">
+        <a class="navbar-item" href="#top">
           <h1 class="title is-3">Macbar Next Bus</h1>
         </a>
       </div>
@@ -44,10 +44,10 @@
     <!-- navbar end -->
 
     <!-- hero 1 start -->
-    <section class="hero is-fullheight" style="text-align: center; position: relative;">
+    <section id="top" class="hero is-fullheight" style="text-align: center; position: relative;">
       <div class="hero-body">
         <div class="container">
-          <img src="macbook.png" alt="">
+          <img src="macbar-next-bus.png" alt="">
         </div>
       </div>
       <div class="hero-foot">
@@ -121,19 +121,52 @@
         </ul>
     </section>
 
+    <section class="hero">
+      <!-- Begin MailChimp Signup Form -->
+      <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+      <style type="text/css">
+        #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+        /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+           We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+      </style>
+      <div id="mc_embed_signup">
+      <form action="//laplayacollective.us16.list-manage.com/subscribe/post?u=8222d248e1a8b509b71efad02&amp;id=88082ba0cc" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div id="mc_embed_signup_scroll">
+        <label for="mce-EMAIL">Subscribe to my mailing list</label>
+        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_8222d248e1a8b509b71efad02_88082ba0cc" tabindex="-1" value=""></div>
+          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+          </div>
+      </form>
+      </div>
+      <!--End mc_embed_signup-->
+    </section>
+
     <footer class="footer">
-  <div class="container">
-    <div class="content has-text-centered">
-      <p>
-        <strong>Macbar Next Bus</strong> by <a href="https://devonbradley.com">Devon Bradley</a>. The source code is licensed
-        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
-      </p>
-      <p>
-        <a class="icon" href="https://github.com/dbradleyfl/macbar-next-bus">
-          <i class="fa fa-github"></i>
-        </a>
-      </p>
-    </div>
+      <div class="container">
+        <div class="content has-text-centered">
+          <p>
+            <strong>Macbar Next Bus</strong> by <a href="https://devonbradley.com">Devon Bradley</a>. The source code is licensed
+            <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+            is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+          </p>
+          <p>
+            <a class="icon" href="https://github.com/dbradleyfl/macbar-next-bus">
+              <i class="fa fa-github"></i>
+            </a>
+          </p>
+        </div>
+      </div>
+    </footer>
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50336937-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-50336937-1');
+    </script>
   </body>
 </html>
