improve meta on macbar-next-bus page

--- a/macbar-next-bus/index.html
+++ b/macbar-next-bus/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Macbar Next Bus</title>
+    <meta name="description" content="An electron menubar application for monitoring a specified transit stop from the RestBus.info API">
+    <meta property="og:title" content="Macbar Next Bus" />
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="icon.png"/>
     <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.min.css">
