--- a/macbar-next-bus/index.html
+++ b/macbar-next-bus/index.html
@@ -6,6 +6,7 @@
     <title>Macbar Next Bus</title>
     <meta name="description" content="An electron menubar application for monitoring a specified transit stop from the RestBus.info API">
     <meta property="og:title" content="Macbar Next Bus" />
+    <meta property="og:description" content="An electron menubar application for monitoring a specified transit stop from the RestBus.info API" />
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="icon.png"/>
     <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
